Replace the in-app Advisor with Microscope MCP and a skill
The Advisor asked a model about code it could only read through four
tools, then handed back a unified diff nobody had compiled, for the
reader to apply by hand. With an MCP server that any Claude Code session
in the developer's own repository can call, every part of that is weaker
than doing the same work where the code is: the session reads the real
source, makes the edit, builds it, and shows the result itself.

So Jeffrey keeps the half only Jeffrey has — the measurement, and the
identity of the build it came from — and stops shipping opinions about
how to change code.

Added:

- profiles_buildInfo: the commit a recording was tagged with, every tag
  it carries, and the JVM and application command line. This is what
  lets a session check it is in the repository the profile came from,
  which is the one assumption the whole workflow rests on.
- The optimize-from-profile skill: the repository check and what each
  outcome means, the graph to take for each question, the rules for
  turning a frame label into a file, and the requirement to build and
  test before reporting anything as done.

Removed: the profile-advisor module, its controllers, configuration and
project-folders manager, both settings keys and the advisor
settings-mappings category, the advisor repositories and their four
tables, the profile UI mode with its routes and Settings tab, and the
advisor-source toolset on the headless CLI endpoint.

RecordingCommitResolver moves into core-microscope rather than going
with the module: profiles_buildInfo reuses its tag-key preference list,
so a build tagged in a way one path understands cannot be a build the
other fails to identify.

ai-config, claude-code-headless and the pipeline machinery stay — the
OQL and DuckDB assistants use them, and AiWiringContextTest guards that.