@@ -18,7 +18,11 @@
 
 package cafe.jeffrey.microscope.core.mcp.tools;
 
+import cafe.jeffrey.microscope.persistence.api.RecordingTag;
+import cafe.jeffrey.microscope.persistence.api.RecordingTagsRepository;
+import cafe.jeffrey.microscope.core.mcp.RecordingCommitResolver;
 import cafe.jeffrey.profile.feature.FeatureType;
+import cafe.jeffrey.profile.manager.ProfileConfigurationManager;
 import cafe.jeffrey.profile.manager.ProfileFeaturesManager;
 import cafe.jeffrey.profile.manager.FlamegraphManager;
 import cafe.jeffrey.profile.manager.ProfileManager;
@@ -26,6 +30,7 @@ import cafe.jeffrey.profile.manager.heapdump.HeapDumpManager;
 import cafe.jeffrey.profile.model.EventSummaryResult;
 import cafe.jeffrey.shared.common.model.EventSummary;
 import cafe.jeffrey.shared.common.model.ProfileInfo;
+import cafe.jeffrey.shared.common.Json;
 import cafe.jeffrey.shared.common.model.RecordingEventSource;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
@@ -34,9 +39,11 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.mockito.junit.jupiter.MockitoSettings;
 import org.mockito.quality.Strictness;
+import tools.jackson.databind.node.ObjectNode;
 
 import java.time.Instant;
 import java.util.List;
+import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.Mockito.when;
@@ -59,14 +66,29 @@ class ProfileMcpToolsTest {
     @Mock
     HeapDumpManager heapDumpManager;
 
+    @Mock
+    ProfileConfigurationManager configurationManager;
+
+    @Mock
+    RecordingCommitResolver commitResolver;
+
+    @Mock
+    RecordingTagsRepository recordingTagsRepository;
+
     private ProfileMcpTools tools() {
-        return new ProfileMcpTools(profileManager);
+        return new ProfileMcpTools(profileManager, commitResolver, recordingTagsRepository);
     }
 
     private void stubProfile(RecordingEventSource eventSource) {
+        stubProfile(eventSource, "rec-1");
+    }
+
+    private void stubProfile(RecordingEventSource eventSource, String recordingId) {
         when(profileManager.info()).thenReturn(new ProfileInfo(
                 "p-1", "proj-1", "ws-1", "Checkout run", eventSource,
-                START, START.plusSeconds(120), START, true, false, "rec-1"));
+                START, START.plusSeconds(120), START, true, false, recordingId));
+        when(profileManager.profileConfigurationManager()).thenReturn(configurationManager);
+        when(configurationManager.configuration()).thenReturn(Json.createObject());
         when(profileManager.featuresManager()).thenReturn(featuresManager);
         when(profileManager.flamegraphManager()).thenReturn(flamegraphManager);
         when(profileManager.heapDumpManager()).thenReturn(heapDumpManager);
@@ -132,6 +154,74 @@ class ProfileMcpToolsTest {
 
             assertTrue(result.contains(FeatureType.SUBSECOND.name()));
             assertTrue(result.contains(FeatureType.TIMESERIES.name()));
+        }
+    }
+
+    @Nested
+    class BuildInfo {
+
+        private ObjectNode jvmInformation(String javaArguments) {
+            ObjectNode jvm = Json.createObject();
+            jvm.put("JVM Name", "OpenJDK 64-Bit Server VM");
+            jvm.put("JVM Version", "25.0.1+9");
+            jvm.put("JVM Command Line Arguments", "-Xmx4g -XX:+UseZGC");
+            jvm.put("Java Application Arguments", javaArguments);
+
+            ObjectNode configuration = Json.createObject();
+            configuration.set("JVM Information", jvm);
+            return configuration;
+        }
+
+        @Test
+        void reportsTheCommitTheRecordingWasTaggedWith() {
+            stubProfile(RecordingEventSource.JDK);
+            when(commitResolver.resolve("rec-1")).thenReturn(Optional.of("9f21c0e"));
+            when(recordingTagsRepository.listForRecording("rec-1")).thenReturn(List.of(
+                    new RecordingTag("git.commit", "9f21c0e"),
+                    new RecordingTag("service", "checkout")));
+
+            String result = tools().buildInfo();
+
+            assertTrue(result.contains("\"recordingCommit\":\"9f21c0e\""));
+            assertTrue(result.contains("\"key\":\"service\""));
+        }
+
+        /**
+         * The common case for a recording made by hand. Reported as unknown rather than omitted, so an
+         * absent field is not read as a match.
+         */
+        @Test
+        void admitsWhenNothingIdentifiesTheBuild() {
+            stubProfile(RecordingEventSource.JDK);
+            when(commitResolver.resolve("rec-1")).thenReturn(Optional.empty());
+            when(recordingTagsRepository.listForRecording("rec-1")).thenReturn(List.of());
+
+            String result = tools().buildInfo();
+
+            assertTrue(result.contains("\"recordingCommit\":null"));
+            assertTrue(result.contains("\"jvm\":null"));
+        }
+
+        @Test
+        void carriesTheCommandLineTheApplicationRanWith() {
+            stubProfile(RecordingEventSource.JDK);
+            when(configurationManager.configuration())
+                    .thenReturn(jvmInformation("cafe.jeffrey.example.OrdersApplication"));
+
+            String result = tools().buildInfo();
+
+            assertTrue(result.contains("cafe.jeffrey.example.OrdersApplication"));
+            assertTrue(result.contains("-XX:+UseZGC"));
+        }
+
+        /**
+         * A Quick Analysis profile was opened straight from a file: there is no recording to ask about.
+         */
+        @Test
+        void asksForNoTagsWhenTheProfileHasNoRecording() {
+            stubProfile(RecordingEventSource.JDK, null);
+
+            assertTrue(tools().buildInfo().contains("\"recordingTags\":[]"));
         }
     }
 }
